syntax = "proto3";
package forge_abi;

message CreateStockTx {
  Stock stock = 1;
}

message Stock {
  string name = 1;
  string brand = 2;
}
